# vuls

./: .env  .gitignore  .secrets  DEBIAN_OVAL_IMPLEMENTATION.md  POSTGRESQL_OVAL_MIGRATION_COMPLETE.md  README.md  README_VERIONS.md  STUCK_JOBS_CLEANUP.md  UBUNTU_OVAL_IMPLEMENTATION.md  VULNERABILITY_ANALYSIS_SUMMARY.md  VULNERABILITY_VERSION_ANALYSIS_SUMMARY.md  WEB_APPLICATION_SUMMARY.md  apply_migrations.py  clear_stuck_jobs.py  compose.yml  comprehensive_vulnerability_checker.py  debug_debian_data.py  debug_debian_structure.py  enhanced_report_u16.json  enhanced_report_u16_fixed.json  enhanced_vulnerability_checker.py  enhanced_vulnerability_checker_pg.py  fixed_report.json  gost_report.json  gost_report_u16_fixed.json  gost_vulnerability_checker.py  improved_vulnerability_service.py  main.py  manage_oval_data.py  migrate_to_postgresql.py  mkdocs.yml  oval_vulnerability_checker.py  postgresql_schema.sql  processed_vulnerability_report.json  pyproject.toml  retailaware-u16tbpe.json  serve-docs.sh  setup_nvd_schedules.py  simple_vulnerability_checker.py  sync_to_postgresql.py  (+18 more)
web-app/: DEVELOPMENT.md  Dockerfile  Dockerfile.dev  alembic.ini  check_scheduled_tasks.py  pyproject.toml  setup_security_data_schedules.py  start-dev.sh  start.sh  supervisord-celery.conf  test_executor_connection.py
web-app/alembic/: env.py
web-app/alembic/versions/: 20a5eb9f1fd1_initial_migration_baseline_from_.py  923c9d2b9855_add_debian_oval_tables.py  add_debian_oval_schema_tables.py  add_nvd_cve_cache_table.py  (+8 more)
web-app/app/: __init__.py  auth.py  celery_app.py  config.py  main.py
(+188 files in other folders)
